{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 357,
  "lineage": "506ac22a-51c8-fce8-2825-c0e4df8ce5e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095a14c46a3044253",
            "arn": "arn:aws:ec2:us-east-1:654654402572:elastic-ip/eipalloc-095a14c46a3044253",
            "association_id": "eipassoc-0ec812acf9458c47d",
            "domain": "vpc",
            "id": "eipalloc-095a14c46a3044253",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02ff9644ac7aee971",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-3-234-37-13.compute-1.amazonaws.com",
            "public_ip": "3.234.37.13",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df9c378d64375187",
            "arn": "arn:aws:ec2:us-east-1:654654402572:elastic-ip/eipalloc-0df9c378d64375187",
            "association_id": "eipassoc-0731542010ae3e34e",
            "domain": "vpc",
            "id": "eipalloc-0df9c378d64375187",
            "network_border_group": "us-east-1",
            "network_interface": "eni-027014c10a8cdb070",
            "private_dns": "ip-10-0-3-10.ec2.internal",
            "private_ip": "10.0.3.10",
            "public_dns": "ec2-44-193-21-211.compute-1.amazonaws.com",
            "public_ip": "44.193.21.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d43db0594b521b",
            "arn": "arn:aws:ec2:us-east-1:654654402572:instance/i-09a3b5c0be75ead50",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "Private Instance EBS 1"
                },
                "tags_all": {
                  "Name": "Private Instance EBS 1"
                },
                "throughput": 0,
                "volume_id": "vol-0f4ecf202243b90bc",
                "volume_size": 1,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09a3b5c0be75ead50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "network",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058ff62541a56c646",
            "private_dns": "ip-10-0-2-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b14bc6d5650644d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f73ceb7444e34a1",
            "tags": {
              "Name": "Private Instance 1"
            },
            "tags_all": {
              "Name": "Private Instance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df00e3c18f64be23"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_Private_SG",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d43db0594b521b",
            "arn": "arn:aws:ec2:us-east-1:654654402572:instance/i-0fa93b9a0f8ae87e3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "Private Instance EBS 2"
                },
                "tags_all": {
                  "Name": "Private Instance EBS 2"
                },
                "throughput": 0,
                "volume_id": "vol-0b68654135336cb60",
                "volume_size": 1,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa93b9a0f8ae87e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "network",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef1f8408ee668671",
            "private_dns": "ip-10-0-4-222.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a77b35f9803990b6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01532e13aa68eb947",
            "tags": {
              "Name": "Private Instance 2"
            },
            "tags_all": {
              "Name": "Private Instance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df00e3c18f64be23"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_Private_SG",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d43db0594b521b",
            "arn": "arn:aws:ec2:us-east-1:654654402572:instance/i-050c1e4e436c58fe0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "Public Instance EBS 1"
                },
                "tags_all": {
                  "Name": "Public Instance EBS 1"
                },
                "throughput": 0,
                "volume_id": "vol-0d19c6c895eb3a324",
                "volume_size": 1,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050c1e4e436c58fe0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "network",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5854886daedd05a",
            "private_dns": "ip-10-0-1-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.204",
            "public_ip": "107.21.4.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b88c5f813810ac8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034f1494d03ff5f23",
            "tags": {
              "Name": "Public Instance 1"
            },
            "tags_all": {
              "Name": "Public Instance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053a15dda165f2630"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_Public_SG",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063d43db0594b521b",
            "arn": "arn:aws:ec2:us-east-1:654654402572:instance/i-0ec85725a7615150b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "Public Instance EBS 2"
                },
                "tags_all": {
                  "Name": "Public Instance EBS 2"
                },
                "throughput": 0,
                "volume_id": "vol-018e0924d02d8ec4c",
                "volume_size": 1,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ec85725a7615150b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "network",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082853f990bffb11c",
            "private_dns": "ip-10-0-3-73.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.73",
            "public_ip": "98.80.65.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02d4a8f4f92737ea8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab7d151d3f438f82",
            "tags": {
              "Name": "Public Instance 2"
            },
            "tags_all": {
              "Name": "Public Instance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053a15dda165f2630"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_Public_SG",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:internet-gateway/igw-0031a215f7768ccad",
            "id": "igw-0031a215f7768ccad",
            "owner_id": "654654402572",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095a14c46a3044253",
            "association_id": "eipassoc-0ec812acf9458c47d",
            "connectivity_type": "public",
            "id": "nat-0aa58278b380a7171",
            "network_interface_id": "eni-02ff9644ac7aee971",
            "private_ip": "10.0.1.243",
            "public_ip": "3.234.37.13",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-034f1494d03ff5f23",
            "tags": {
              "Name": "Demo NAT Gateway 1"
            },
            "tags_all": {
              "Name": "Demo NAT Gateway 1"
            }
          },
          "dependencies": [
            "aws_eip.elastic_IP",
            "aws_internet_gateway.IGW",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df9c378d64375187",
            "association_id": "eipassoc-0731542010ae3e34e",
            "connectivity_type": "public",
            "id": "nat-0db3e9133b1e1a476",
            "network_interface_id": "eni-027014c10a8cdb070",
            "private_ip": "10.0.3.10",
            "public_ip": "44.193.21.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ab7d151d3f438f82",
            "tags": {
              "Name": "Demo NAT Gateway 2"
            },
            "tags_all": {
              "Name": "Demo NAT Gateway 2"
            }
          },
          "dependencies": [
            "aws_eip.elastic_IP",
            "aws_internet_gateway.IGW",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:route-table/rtb-0a18bf964646c2af5",
            "id": "rtb-0a18bf964646c2af5",
            "owner_id": "654654402572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aa58278b380a7171",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1"
            },
            "tags_all": {
              "Name": "Private Route Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_IP",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.demo-nat-gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:route-table/rtb-0153dcfc82d3d5ba9",
            "id": "rtb-0153dcfc82d3d5ba9",
            "owner_id": "654654402572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0db3e9133b1e1a476",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 2"
            },
            "tags_all": {
              "Name": "Private Route Table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_IP",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.demo-nat-gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:route-table/rtb-0c5dbfa726a825284",
            "id": "rtb-0c5dbfa726a825284",
            "owner_id": "654654402572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0031a215f7768ccad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table 1"
            },
            "tags_all": {
              "Name": "Public Route Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:route-table/rtb-0f79588b89c9e1754",
            "id": "rtb-0f79588b89c9e1754",
            "owner_id": "654654402572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0031a215f7768ccad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table 2"
            },
            "tags_all": {
              "Name": "Public Route Table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be3b84bf2bd00d53",
            "route_table_id": "rtb-0a18bf964646c2af5",
            "subnet_id": "subnet-06f73ceb7444e34a1"
          },
          "dependencies": [
            "aws_eip.elastic_IP",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.demo-nat-gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068c2a25f02cb21ef",
            "route_table_id": "rtb-0153dcfc82d3d5ba9",
            "subnet_id": "subnet-01532e13aa68eb947"
          },
          "dependencies": [
            "aws_eip.elastic_IP",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.demo-nat-gateway",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0572cd9a8722d9d76",
            "route_table_id": "rtb-0c5dbfa726a825284",
            "subnet_id": "subnet-034f1494d03ff5f23"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069069ffcc5a35ace",
            "route_table_id": "rtb-0f79588b89c9e1754",
            "subnet_id": "subnet-0ab7d151d3f438f82"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_Private_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:security-group/sg-0df00e3c18f64be23",
            "description": "Allows inbound access ssh traffic only from within the VPC only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df00e3c18f64be23",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_Private_SG",
            "name_prefix": "",
            "owner_id": "654654402572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Security Group"
            },
            "tags_all": {
              "Name": "Private Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_Public_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:security-group/sg-053a15dda165f2630",
            "description": "Allows inbound access traffic on port HTTP and ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053a15dda165f2630",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_Public_SG",
            "name_prefix": "",
            "owner_id": "654654402572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Security Group"
            },
            "tags_all": {
              "Name": "Public Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:subnet/subnet-06f73ceb7444e34a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f73ceb7444e34a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654402572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:subnet/subnet-01532e13aa68eb947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01532e13aa68eb947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654402572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:subnet/subnet-034f1494d03ff5f23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034f1494d03ff5f23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654402572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:subnet/subnet-0ab7d151d3f438f82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab7d151d3f438f82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654402572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-08c4a61e38e51a812"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654402572:vpc/vpc-08c4a61e38e51a812",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b612c93785cc42e8",
            "default_route_table_id": "rtb-048d8de1070cf705f",
            "default_security_group_id": "sg-03f1c634510823ad6",
            "dhcp_options_id": "dopt-05ad1fd3cc382c4ae",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c4a61e38e51a812",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048d8de1070cf705f",
            "owner_id": "654654402572",
            "tags": {
              "Name": "Project VPC"
            },
            "tags_all": {
              "Name": "Project VPC"
            }
          }
        }
      ]
    }
  ]
}